; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/tools/perf/arch/extr_common.c_perf_session_env__lookup_objdump.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/tools/perf/arch/extr_common.c_perf_session_env__lookup_objdump.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.perf_session_env = type { i32* }

@.str = private unnamed_addr constant [8 x i8] c"objdump\00", align 1
@objdump_path = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @perf_session_env__lookup_objdump(%struct.perf_session_env* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.perf_session_env*, align 8
  store %struct.perf_session_env* %0, %struct.perf_session_env** %3, align 8
  %4 = load %struct.perf_session_env*, %struct.perf_session_env** %3, align 8
  %5 = getelementptr inbounds %struct.perf_session_env, %struct.perf_session_env* %4, i32 0, i32 0
  %6 = load i32*, i32** %5, align 8
  %7 = icmp eq i32* %6, null
  br i1 %7, label %8, label %9

8:                                                ; preds = %1
  store i32 0, i32* %2, align 4
  br label %12

9:                                                ; preds = %1
  %10 = load %struct.perf_session_env*, %struct.perf_session_env** %3, align 8
  %11 = call i32 @perf_session_env__lookup_binutils_path(%struct.perf_session_env* %10, i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str, i64 0, i64 0), i32* @objdump_path)
  store i32 %11, i32* %2, align 4
  br label %12

12:                                               ; preds = %9, %8
  %13 = load i32, i32* %2, align 4
  ret i32 %13
}

declare dso_local i32 @perf_session_env__lookup_binutils_path(%struct.perf_session_env*, i8*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
